--- a/README.adoc
+++ b/README.adoc
@@ -6,8 +6,8 @@ developed during research for http://arrakis.cs.washington.edu/[Arrakis].
 Compared to Postmark, OMark:
 
 - Supports multi-core benchmarking
-- Is written in modern C99
 - Is highly configurable
+- Has a small, modern codebase
 
 Like PostMark, OMark simulates a ``realistic'' server filesystem workload
 (specifically, a mail server): lots of small, short-lived files which are
@@ -15,7 +15,31 @@ created, deleted, read from, and appended to. The benchmark models this by
 creating an initial pool of files of random size and contents and then carrying
 out these operations at random.
 
-== Benchmark Configuration
+== Compilation
+OMark is written in C99 with some POSIX.1-2008 extensions. It should compile
+under recent versions of GCC and Clang, just run `make`.
+
+OMark has no external library dependencies. It does, however, depend on a subset
+of the
+https://gcc.gnu.org/onlinedocs/gcc/_005f_005fatomic-Builtins.html[GCC atomic builtins].
+
+== Usage
+By default, omark will run the benchmark in the current directory using the
+default benchmark parameters with a single thread. Run `omark -h` to see the
+full list of options; some highlights are listed here.
+
+=== Multithreaded Benchmark
+OMark can be run with multiple threads in parallel to test filesystem
+scalability to multiple cores. The `-p` option specifies a number of threads to
+run. Note that the threads will not run on any particular processor core;
+support for CPU affinity is not yet implemented.
+
+=== Output
+OMark can either output verbose, human-readable output with `-v`, which is also
+the default, or terse output suitable for parsing by, for example, AWK, with
+`-t`.
+
+=== Benchmark Configuration
 OMark is configured with a configuration file which is specified with the `-c`
 flag. The format is a simple series of `key value` lines, where the valid keys
 are:
@@ -43,6 +67,16 @@ io-dir-ratio 1.0
 read-write-ratio 0.6
 ----
 
+The `-d` option dumps the benchmark parameters and exits.
+
 Notice that only properties of the benchmark itself are configured in the
-configuration file. Properties of a particular run (like how many processes to
-run or which directory to run in) are specified with command line flags instead.
+configuration file. Properties of a particular run (like how many threads to use
+or which directory to run in) are specified with command line flags instead.
+
+=== Miscellaneous
+The working directory for the benchmark, which must exist and should probably be
+empty, can be specified with `-C`.
+
+A seed for the PRNG can be specified with `-s`. The initial benchmark file
+creation is done with the seed `S-1`, and each thread is reseeded with a unique,
+deterministic seed based on S: thread `N` is seeded with seed `S+N`.
